add cd workflow

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,9 +2,10 @@ name: Deploy React project to Github Pages
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: "CI Workflow"
+    types:
+      - completed
 
 jobs:
   build-deploy:
