--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: test workflow
+name: CI Workflow
 
 on:
   push:
@@ -38,16 +38,3 @@ jobs:
         run: npm run test
         shell: bash
 
-  build-publish-docker-image:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        name: Check out code
-
-      - uses: mr-smithers-excellent/docker-build-push@v4
-        name: Build & push Docker image
-        with:
-          image: mikeyswain/demo-app
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
