--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,8 +9,9 @@ on:
 
 jobs:
   build-deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-
+    
     steps:
       # Checkout repo
       - name: Checkout code
